# tap-shopify

./: .gitignore  README.md  config.json  meltano.yml  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_shopify/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tap_shopify/schemas/: abandoned_checkout.json  checkout.json  collect.json  custom_collection.json  customer.json  gift_cards.json  inventory_item.json  inventory_level.json  line_item.json  location.json  metafield.json  order.json  order_adjustment.json  order_discount_codes.json  product.json  refund.json  refund_line_item.json  shipping_line.json  shopifyql.json  tax_line.json  transaction.json  user.json
tap_shopify/tests/: test_core.py  test_pagination.py  test_tap_settings.py  utils.py
