[tool.poetry]
name = "tap-shopify"
version = "0.3.0"
description = "`tap-shopify` is a Singer tap for tap_shopify, built with the Meltano SDK for Singer Taps."
authors = ["Aaron Phethean"]
keywords = [
    "ELT",
    "tap_shopify",
]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
singer-sdk = "^0.45.6"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
tox = "^4.25.0"
flake8 = "^7.2.0"
black = "^25.1.0"
pydocstyle = "^6.1.1"
mypy = "^1.15"
types-requests = "^2.32.0"
isort = "^6.0.1"
responses = "0.25.7"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_shopify"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-shopify = 'tap_shopify.tap:Tap_Shopify.cli'
