[tool.poetry]
name = "tap-shopify"
version = "0.3.0"
description = "`tap-shopify` is a Singer tap for tap_shopify, built with the Meltano SDK for Singer Taps."
authors = ["Aaron Phethean"]
keywords = [
    "ELT",
    "tap_shopify",
]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.4"
singer-sdk = "^0.47.0"
certifi = "2025.6.15" # See https://github.com/certifi/python-certifi/issues/349

[tool.poetry.dev-dependencies]
pytest = "^8.4.0"
tox = "^4.26.0"
flake8 = "^7.2.0"
black = "^25.1.0"
pydocstyle = "^6.1.1"
mypy = "^1.16"
types-requests = "^2.32.4"
isort = "^6.0.1"
responses = "0.25.7"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_shopify"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-shopify = 'tap_shopify.tap:Tap_Shopify.cli'
